--- a/public/styles.css
+++ b/public/styles.css
@@ -155,7 +155,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: white;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 2px solid rgba(0,0,0,.125);
     border-radius: .25rem;
     margin-bottom: 30px;
   }
@@ -163,7 +163,7 @@ body {
   .card-header {
     padding: .75rem 1.25rem;
     background-color: white;
-    border-bottom: 1px solid rgba(0,0,0,.075);
+    border-bottom: 2px solid rgba(0,0,0,.075);
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
   }
@@ -203,6 +203,8 @@ body {
     display: block;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    width: 350px;
+    height: 350px;
   }
   
   .project-content {
@@ -254,7 +256,7 @@ body {
     background: #8e9eab;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color: #fff;
+    color: black;
     -webkit-transition: .5s ease all;
     transition: .5s ease all;
   }
@@ -286,3 +288,13 @@ body {
     text-align: center;
   }
 
+  .myInfo {
+    color: #fff;
+  }
+
+
+
+
+
+
+  
